--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
               <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Home Page</a>
+                                <a class="nav-link" href="#homePage">Home Page</a>
                               </li>
                               <li class="nav-item">
                                   <a class="nav-link" href="#">Links</a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="#">About Us</a>
+                                  <a class="nav-link" href="#About">About Us</a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="#">Contact Us</a>
+                                  <a class="nav-link" href="#contact">Contact Us</a>
                               </li>
                               <li>
                                   <div class="mediaIcons">
@@ -69,7 +69,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
     <div id="About" class="container">
         <div>
-            <img src="aboutImg.40efc12fa98a1568c0b1.jpg" width="400px">
+            <img src="about.jpg" width="400px">
         </div>
         <div class="content">
             <h1>WHO WE ARE</h1>
